# smart-parking-lot-system

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vitest.config.ts
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/api/v1/: __init__.py  admin.py  parking.py  spots.py
app/models/: __init__.py  enums.py  floor.py  parking_lot.py  parking_spot.py  parking_ticket.py  vehicle.py
app/schemas/: __init__.py  parking.py  setup.py
app/services/: __init__.py  allocation_service.py  fee_service.py  parking_service.py
docs/: ARCHITECTURE.md  ER_DIAGRAM.md
node-ts/: .gitignore  README.md  tsconfig.json
node-ts/src/: app.ts  exceptions.ts  main.ts
node-ts/src/db/: index.ts
node-ts/src/routes/: admin.ts  spots.ts
node-ts/src/types/: enums.ts
node-ts/tests/: allocation.test.ts  api.test.ts  concurrency.test.ts
node-ts/tests/helpers/: db.ts  race-worker-shim.cjs  race-worker.ts
src/: app-context.ts  app.ts  config.ts  schemas.ts
src/db/: schema.ts
src/routes/: parking.ts
src/services/: allocation-service.ts  fee-service.ts  parking-service.ts
tests/: conftest.py  fee-calculation.test.ts  test_allocation.py  test_api.py  test_concurrency.py  test_fee_calculation.py
